# MLproject

./: Data_preperation1.py  EDA.ipynb  README.md  Untitled.ipynb  data_clansing.ipynb  pyproject.toml
