[tool.poetry]
name = "mlproject"
version = "0.1.0"
description = ""
authors = ["omerkobi <omerkobi9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
scipy = "^1.15.2"
seaborn = "^0.13.2"
kagglehub = "^0.3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
