[tool.poetry]
name = "mlproject"
version = "0.1.0"
description = ""
authors = ["omerkobi <omerkobi9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
scipy = "^1.15.2"
seaborn = "^0.13.2"
kagglehub = "^0.3.9"
numpy = "^2.2.3"
ipykernel = "^6.29.5"
scikit-learn = "^1.6.1"
jupyter = "^1.1.1"
missingno = "^0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
